Fixed text alignment

--- a/src/sections/events-page/styling/YellowWidget.module.css
+++ b/src/sections/events-page/styling/YellowWidget.module.css
@@ -1,5 +1,4 @@
 .yellowWidget {
-  z-index: 2;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -13,12 +12,9 @@
   border-radius: 8px;
   border-style: solid;
   margin: 10px;
-
-  /* background-color: black; */
 }
 
 .yellowWidget img {
-  z-index: 1;
   display: flex;
   flex-basis: inherit;
   flex-direction: column;
@@ -26,8 +22,6 @@
   border-radius: 8px;
   object-fit: cover;
   border-color: black;
-  /* border-style: solid; */
-  /* background-color: rgba(0, 0, 0, 0.5); */
   height: inherit;
   width: inherit;
   min-height: 0;
@@ -36,66 +30,26 @@
 }
 
 .yellowWidget .description {
-  z-index: 2;
   display: flex;
   flex-basis: inherit;
-  align-items: center;
-  flex-flow: row wrap;
+  flex-flow: column wrap;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  vertical-align: center;
+  text-align: center;
   color: white;
 }
-
-/* .yellowWidget .description {
-  display: flex;
-  flex-basis: inherit;
-  align-items: center;
-  flex-flow: row wrap;
-  position: relative;
-  top: -3vh;
-  align-items: center;
-  border-radius: 8px;
-  background: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
-    url("main_logo.png");
-  background-size: calc(50px + 25vw) calc(50px + 35vh);
-  border-color: black;
-  border-style: solid;
-  margin: 10px;
-  padding-bottom: 3vh;
-  padding-left: 5px;
-  width: calc(45px + 25vw);
-  height: fit-content;
-  color: white;
-} */
-
-/* .yellowWidget .description h1 {
-  align-items: center;
-  font-size: 16px;
-  text-align: center;
-}
-
-.yellowWidget .description p {
-  align-items: center;
-  font-size: 12px;
-  margin-bottom: 1vh;
-  text-align: center;
-} */
 
 .yellowWidget h1 {
   position: relative;
   top: -3vh;
-  z-index: 4;
-  align-items: center;
   font-size: 16px;
   text-align: center;
 }
 
 .yellowWidget p {
-  z-index: 3;
-  align-items: center;
   font-size: 12px;
-  /* margin-bottom: 1vh; */
   text-align: center;
 }
